--- a/kubernetes/url-shortener-deployment.yaml
+++ b/kubernetes/url-shortener-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: url-shortener
 spec:
-  replicas: 3  # multiple instances
+  replicas: 3
   selector:
     matchLabels:
       app: url-shortener
